--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "hello-world",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "ask-sdk-core": "^2.0.0",
-    "ask-sdk-model": "^1.0.0"
-  }
+    "name": "hello-world",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "ask-sdk-core": "^2.0.0",
+        "ask-sdk-model": "^1.0.0"
+    },
+    "devDependencies": {
+        "acorn": "^6.0.4",
+        "eslint": "^5.9.0",
+        "eslint-config-prettier": "^3.3.0",
+        "eslint-plugin-jest": "^22.0.0",
+        "eslint-plugin-prettier": "^3.0.0",
+        "jest": "^23.6.0",
+        "prettier": "^1.15.2",
+        "prettier-eslint": "^8.8.2"
+    }
 }
