--- a/lambda/api/package.json
+++ b/lambda/api/package.json
@@ -8,11 +8,9 @@
     },
     "author": "",
     "license": "ISC",
-    "dependencies": {
-        "aws-sdk": "^2.361.0"
-    },
     "devDependencies": {
         "acorn": "^6.0.4",
+        "aws-sdk": "^2.368.0",
         "eslint": "^5.9.0",
         "eslint-config-prettier": "^3.3.0",
         "eslint-plugin-jest": "^22.0.0",
