--- a/lambda/api/package.json
+++ b/lambda/api/package.json
@@ -4,7 +4,8 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "pretest": "eslint index.js lib/**/*.js",
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
