--- a/lambda/api/package.json
+++ b/lambda/api/package.json
@@ -19,5 +19,9 @@
         "jest": "^23.6.0",
         "prettier": "^1.15.2",
         "prettier-eslint": "^8.8.2"
+    },
+    "dependencies": {
+        "axios": "^0.18.0",
+        "tmp-promise": "^1.0.5"
     }
 }
