--- a/lambda/custom/package.json
+++ b/lambda/custom/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "acorn": "^6.0.4",
+        "aws-sdk": "^2.373.0",
         "eslint": "^5.9.0",
         "eslint-config-prettier": "^3.3.0",
         "eslint-plugin-jest": "^22.0.0",
